[gd_scene load_steps=2 format=3 uid="uid://1mp0cqt0r6a0"]

[ext_resource type="Script" path="res://settings/saver.gd" id="1_3bnea"]

[node name="Saver" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8
script = ExtResource("1_3bnea")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 8

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemList" type="ItemList" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ButtonUp" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 3
text = "↑"

[node name="ButtonDown" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
size_flags_vertical = 3
text = "↓"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="MenuButtonInsertB" type="MenuButton" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 4
action_mode = 1
text = "Insert Built-in"
flat = false
switch_on_hover = true

[node name="ButtonInsertPlugin" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Insert Plug-in"

[node name="ButtonDelete" type="Button" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 4
text = "Delete"

[node name="Control" type="Control" parent="VBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ButtonUp" to="." method="_on_button_up_pressed" flags=18]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer2/VBoxContainer/ButtonDown" to="." method="_on_button_down_pressed" flags=18]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/ButtonInsertPlugin" to="." method="_on_button_insert_plugin_pressed" flags=18]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/HBoxContainer/ButtonDelete" to="." method="_on_button_delete_pressed" flags=18]
